2nd ajax fetchinng local JSON

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <h1>hello</h1>
     <div class="container">
         <button id=button>Get text file</button>
+        <br><br>
+        <div id="text">
+
+        </div>
     </div>
     <script src="main.js"></script>
 </body>
