--- a/ajax2.html
+++ b/ajax2.html
@@ -16,10 +16,12 @@
 
         <button id=button2>Get Users JSON</button>
         <br><br>
-        <div id="User">
-            <h1>User</h1>
+        <h1>User</h1>
+        <div id="user">
+
         </div>
-        <div id="Users"></div>
+        <h1>Users</h1>
+        <div id="users"></div>
     </div>
     <script src="ajax2.js"></script>
 </body>
